react_webviews/src/common/ui/style.scss
/* ... */
.default-otp .content {
  margin: 20px 0px 0px;
  font-size: 14px;
  color: #767e86;
  font-weight: 400;
  line-height: 1.5;
}
.default-otp .content-auth {
  font-weight: 600;
}
.flex-center {
  display: flex;
  align-items: center;
}
.input-placeholder-right {
  line-height: 40px;
  position: absolute;
  right: 5px;
  top: 17px;
  bottom: 0;
  -moz-transition: 0.3s right ease;
  -ms-transition: 0.3s right ease;
  -o-transition: 0.3s right ease;
  -webkit-transition: 0.3s right ease;
  transition: 0.3s right ease;
  z-index: 0;
}

.bottom-short-footer {
  display: flex;
  justify-content: space-between;
  margin: 80px 0 0 0;
}
.left-arrow {
  width: fit-content;
  background: #ececec;
  padding: 12px 20px 12px 20px;
  height: fit-content;
  border-radius: 4px;
}
.left-arrow img {
  width: 20px;
}
.right-arrow {
  // width: 200px;
  background: var(--secondary);
  padding: 12px 20px 12px 20px;
  height: fit-content;
  border-radius: 4px;
  text-align: center;
}
.right-arrow img {
  width: 20px;
}

.MuiInput-underline.MuiInput-disabled:before {
  background-image: none !important;
  border-bottom: 1px solid #d3dbe4;
}
.hash-right {
  color: #878787;
  font-size: 12px;
  font-weight: 400;
  margin: -5px 0 0 0px;
  position: absolute;
}

.react-tooltip-lite {
  border:0.5px solid rgba(151, 151, 151, 0.1);
  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05);
  border-radius: 10px;
}

.plus-minus-input {
  .right-data {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .images {
    display: flex;
    align-items: center;
  }

  .plus-minus-icons {
    border: 1px solid var(--primary);
    padding: 2px;
    border-radius: 2px;
    cursor: pointer;
  }

  .content {
    color: #0a1d32;
    font-size: 14px;
    font-weight: 400;
  }
  .number {
    color: #0a1d32;
    font-size: 14px;
    font-weight: 500;
    margin: 0 10px 0 10px;
  }
}

.generic-hr {
  border-top: 1px solid #ededed;
}

.checkmark {
  display: inline-block;
  transform: rotate(45deg);
  height: 25px;
  width: 12px;
  margin-left: 60%;
  border-bottom: 7px solid #78b13f;
  border-right: 7px solid #78b13f;
}
.checkmark:after {
  border: solid var(--primary);
}

.generic-choose-input {
  margin: 0 -15px 30px -20px;
  .tile {
    margin: 10px 15px 20px 15px;
    padding: 20px 10px 20px 10px;
    cursor: pointer;
  }
  .tile-selected {
    margin: 10px 0px 20px 0px;
    background: linear-gradient(to right, #f4f4f4, white);
    padding: 20px 25px 20px 25px;
  }
  .tile-disabled{
    opacity: 0.4;
  }
  .select-tile {
    color: rgb(122, 118, 118);
    line-height: 1.4;
    font-size: 18px;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .name {
    color: #0a1c32;
    font-size: 14px;
    font-weight: 600;
    line-height: 1.6;
  }
  .content {
    color: #767e86;
    font-size: 14px;
  }

  .completed-icon img {
    width: 14px;
    margin: 4px 0 0 8px;
  }
}



.__react_component_tooltip::before,
.__react_component_tooltip::after {
  content: "";
  top: -6px !important;
  transform: rotate(-90deg);
  right: 6px !important;
  border-left-width: 12px !important;
  border-bottom-width: 5px !important;
}

body[data-device="web"] {
  .__react_component_tooltip {
    max-width: var(--tooltip-width);
    margin: 0 auto !important;
    z-index: 999999;
    height: auto !important;
    left: 8% !important;
    margin-top: 50px !important;
  }
  .__react_component_tooltip.show {
    opacity: 1;
   }
  .__react_component_tooltip::before,
  .__react_component_tooltip::after {
    content: "";
    right: 46px !important;
  }
}

body[data-device="mobile"] {
  .__react_component_tooltip {
    // left: auto !important;
    margin-right: -1px !important;
    width: 62%;
    // right: 0px;
    margin-top: 70px !important;
  }
  .__react_component_tooltip.show {
    opacity: 1;
   }
}

.generic-render-benefits {
  margin-top: -40px;
  .common-how-steps .common-steps-images {
    margin-top: 0px;
  }
}

.dropdown-in-modal {
  .input-box {
    display: flex;
    justify-content: space-between;
    margin: 50px 0 0 0;
    border-bottom: 1px solid #949494;
    padding: 0 0 3px 0;
    cursor: pointer;
    .input-value {
      color: #0a1d32;
      font-size: 15px;
      font-weight: 400;
    }
  }
}

#dropdown-in-modal-dialog {
  .MuiDialog-paper {
    margin: 0px !important;
  }

  .row-scroll {
    font-size: 14px;
    color: #4a4a4a;
    padding: 20px 0px 10px 20px;
    width: 105%;
    margin: 5px -13px 0 -15px;
    cursor: pointer;
    position: relative;
  }
  .row-scroll-selected {
    background: #f4f4f4;
    cursor: unset;
  }
  .content-selected {
    color: var(--primary);
    font-weight: 500;
  }
}

#dropdown-in-modal-dialog-title {
  padding: 20px 0 0 20px;
  height: 100px;
  .dialog-head {
    margin: 0px 0px 0px -20px;
    text-align: cent;
    padding: 13px 10px 13px 20px;
    position: fixed;
    color: #160d2e;
    font-size: 20px;
    font-weight: 600;
    width: auto;
    text-align: left;
    background: white;
  }
}

.plus-minus-input-label {
  color: #0A1D32;
  font-size: 13px;
  font-weight: 400;
  margin: 0 0 10px 0;
}

#generic-input-popup-dialog-title {
  margin: 0 0 10px -10px;
}

.generic-bottomsheet {
  .top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 10px 0;
  }

  div#alert-dialog-description {
    margin: -20px 0 0 0;
  }

  .header_title {
    color: #0a1d32;
    font-size: 16px;
    font-weight: 600;
  }

  .content {
    color: #767e86;
    font-size: 14px;
    line-height: 1.6;
    font-weight: 400;
  }
}

.slider {
  width: 100%;
  margin: 13px 0 11px 0;
}
/* ... */

